fix gradient gap on hover

--- a/frontend/src/components/MovieCard/movieCard.scss
+++ b/frontend/src/components/MovieCard/movieCard.scss
@@ -48,7 +48,7 @@ $background: rgb(14, 13, 13);
 
         &--bottom {
             position: absolute;
-            bottom: 0px;
+            bottom: -1px;
             width: 100%;
             height: 200px;
             background: linear-gradient(to bottom, rgba(14,13,13,0) 0%, rgba(14,13,13,0.79) 64%, rgba(14,13,13,1) 100%);
